--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -17,8 +17,131 @@ body {
 
 html, body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  overflow: hidden;
 }
 
 .container {
+  height: 100%;
+}
 
+#scene {
+  height: 100%;
+  position: relative!important;
+}
+
+.background {
+  width: 100%;
+}
+
+.layer {
+  width: 120%;
+  position: absolute!important;
+  bottom: -15%;
+  left: -10%!important;
+  top: unset!important;
+}
+
+.star, .moon {
+  position: absolute;
+  top: -30px!important;
+  z-index: 1;
+}
+
+.star_1 {
+  left: 50px!important;
+  width: 130px;
+}
+
+.star_2 {
+  left: 250px!important;
+  width: 150px;
+}
+
+.star_3 {
+  left: unset!important;
+  right: 300px!important;
+  width: 140px;
+}
+
+.moon {
+  width: 150px;
+  left: unset!important;
+  right: 50px;
+}
+
+.phrase {
+  z-index: 2;
+  display: block;
+}
+
+.phrase_1 {
+  width: 80%;
+  left: 10%!important;
+  display: none!important;
+}
+
+.phrase_2 {
+  width: 35%;
+  left: 30%!important;
+  display: block;
+  z-index: 3;
+  top: -200px!important;
+}
+
+.phrase_3 {
+  width: 55%;
+  left: 25%!important;
+  z-index: 2;
+  display: block!important;
+  top: -600px!important;
+}
+
+.hide-phrase {
+  top: -200px!important;
+  transition: 1s;
+}
+
+.show-phrase {
+  top: 0!important;
+  transition: 1s;
+}
+
+.show-phrase-3 {
+  top: -150px!important;
+  transition: 1s;
+}
+
+.sub-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.instruction {
+  color: #ffffff;
+  background-color: rgba(0, 0, 0, .5);
+  padding: 30px;
+  border-radius: 10px;
+  margin: auto auto 100px auto;
+}
+
+.hide-instruction {
+  transform: scale(0);
+  opacity: 0;
+  transition: .4s;
+}
+
+.credit {
+  position: absolute;
+  bottom: 10px;
+  left: 20px;
+  color: #ffffff;
+  font-style: italic;
 }
